--- a/style.css
+++ b/style.css
@@ -1,4 +1,56 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: Roboto, sans-serif;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+#logo {
+    display: flex;
+    justify-content: flex-start;
+}
+
+#nav {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+}
+
+#nav-list {
+    display: flex;
+    flex-direction: row;
+    padding-right: 150px;
+    
+}
+
+.nav-item {
+    list-style: none;
+    padding-right: 75px;
+    color: #F4FAF8;
+    font-size: 24px;
+}
+
+.hero {
+    background-color: #1F2937;
+}
+
+#hero-main-text {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
+
+#hero-text {
+    font-size: 24px;
+    color: #E5E7EB;
+}
+
+button {
+    background-color: #3882F6;
+}
+
