--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,7 +46,7 @@ a {
 #hero-box {
     font-size: 24px;
     color: #E5E7EB;
-    
+
 }
 
 #hero-main-text {
@@ -63,6 +63,23 @@ a {
 
 button {
     background-color: #3882F6;
+}
+
+#random-info {
+    display: flexbox;
+}
+
+#information-header {
+    text-align: center;
+}
+
+.images img {
+    width: 200px;
+    height: 200px;
+    display: flex;
+    border: 2px solid black;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 #information-header {
